--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       padding: 0;
       width: 100%;
       height: 100%;
+      /* Fondo mosaico: imagen repetida en mosaico */
       background-color: #0d070d;
+      background-image: url('img/fondo.webp');
+      background-repeat: repeat;
+      /* Ajuste de tamaño del mosaico: cuadrados más grandes */
+      background-size: 150px 150px;
       font-family: Arial, sans-serif;
       color: white;
       user-select: none;
@@ -32,7 +37,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #222;
+      background-color: rgba(34,34,34,0.9);
       border-bottom: 2px solid #ffa500;
       padding: 0 20px;
       z-index: 1000;
@@ -478,11 +483,9 @@
         });
         const imgs=sliderImages.querySelectorAll('img'); imgs.forEach((img,i)=>img.style.display=i===currentIndex?'block':'none');
       }
-      // Después de cargar imágenes, insertar YouTube embeds
       buildYouTubeEmbeds();
     });
     if(typeof imgData==='undefined'){
-      // En caso de no usar listData/imgData, aún inicializar slider
       window.addEventListener('load', ()=>{
         const imgs=sliderImages.querySelectorAll('img'); imgs.forEach((img,i)=>img.style.display=i===currentIndex?'block':'none');
       });
