--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   <header id="header">
     <div class="logo-container"><img src="img/logo.webp" alt="Logo" draggable="false" /></div>
     <div class="title">Dragon Ball Z - Budokai Tenkaichi 4 Texture Pack HD</div>
-    <a href="https://www.youtube.com/@angel06-p7v" target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube"><img src="img/youtube-icon.webp" alt="YouTube" draggable="false" /></a>
+    <a href="https://www.youtube.com/@AngeL06oficial" target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube"><img src="img/youtube-icon.webp" alt="YouTube" draggable="false" /></a>
   </header>
   <main>
     <div>
